--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Madeline Turland"
 title_separator          : "-"
 name                     : &name "Madeline Turland"
 description              : &description "PhD Candidate in Agricultural and Resource Economics"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://mgturland.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "mgturland/mgturland.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
