--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Madeline Turland"
-  avatar           : "headshot.jpg"
+  avatar           : "profile.png"
   bio              : "PhD Candidate in Agricuture and Resource Economics"
   location         : "UC Davis"
   employer         :
