--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 # main links links
 main:
- - title: "Home"
-    url: /home/
+# - title: "Home"
+#    url: /home/
 
-  - title: "Research"
-    url: /research/
+#  - title: "Research"
+#    url: /research/
 
 #  - title: "Talks"
 #    url: /talks/    
