--- a/_config.yml
+++ b/_config.yml
@@ -216,10 +216,10 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _talks
+  # _research
   - scope:
       path: ""
-      type: talks
+      type: research
     values:
       layout: talk
       author_profile: true
