--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,14 +3,14 @@ main:
 # - title: "Home"
 #    url: 
 
-  - title: "Research"
-    url: /research/
+ # - title: "Research"
+ #   url: /research/
 
 #  - title: "Talks"
 #    url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+ # - title: "Teaching"
+ #   url: /teaching/    
     
 #  - title: "Portfolio"
 #    url: /portfolio/
