--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,9 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
+emote_theme           : "mmistakes/minimal-mistakes"
+minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+
 locale                   : "en-US"
 title                    : " "
 title_separator          : "-"
