--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 plugins:
   - jekyll-remote-theme
 remote_theme: mmistakes/minimal-mistakes
-minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "sunrise" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 locale                   : "en-US"
 title                    : " "
